# quickdif

./: .gitignore  README.md  flash_attn_rocm.py  flash_attn_triton.py  latent_colors.py  pyproject.toml  quickdif-multi.sh  quickdif.nu  quickdif.py  quickdif.sh  quickdif.toml.example  quickdiff.py  requirements.txt  sd_lab.json  tests.py  vaecols.py
.github/workflows/: master_ci.yml
attn_custom/: __init__.py  flash_attn_triton.py  rocm_flash.py  sub_quadratic_attention.py  subquad.py  triton_flash.py
attn_subquad/: __init__.py  sub_quadratic_attention.py
measure/: minitrain.py  plot.py  sd_rgb.json  sdxl_lab.json  sdxl_rgb.json  vaecols.py
tests/: parsing.py  tests.py
tests/configs/: latent.toml  model.toml  raster.toml
