[project]
name = "quickdif"
dynamic = ["version"]
readme = "README.md"
license = { file = "LICENSE" }
authors = [{ name = "Beinsezii" }]
requires-python = ">= 3.12"
dependencies = [
    "accelerate>=1.7.0",
    "compel>=2.1.1",
    "diffusers>=0.33.1",
    "huggingface-hub[hf-xet]>=0.31.2",
    "peft>=0.15.2",
    "protobuf>=6.31.0",
    "sentencepiece>=0.2.0",
    "skrample[all]>=0.4.0",
    "torch>=2.7.0",
    "torchao>=0.10.0",
    "transformers>=4.51.3",
]

[project.optional-dependencies]
sageattn = ["sageattention==1.0.6"]

[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
py-modules = ["quickdif"]

[tool.ruff]
line-length = 120
namespace-packages = ["tests"]

[tool.ruff.lint]
select = [
    "A",    # std types
    "ANN",  # annotations
    "BLE",  # blanket except
    "C4",   # comprehension
    "E",    # style errors
    "EM",   # error messages
    "EXE",  # shebangs
    "F",    # format
    "FA",   # future
    "FLY",  # expr fstring
    "FURB", # syn upgrades
    "G",    # log messages
    "I",    # imports
    "ICN",  # import conventions
    "INP001",
    "ISC",  # str cat
    "LOG",  # logging
    "NPY",  # numpy
    "PERF", # perflint
    "PIE",  # misc
    "PL",   # pylint
    "PT",   # pytest
    "Q",    # quotes
    "RUF",  # variety
    "T10",  # pdb.trace
    "T20",  # print
    "TC",   # type checking
    "TD",   # todos
    "TRY",  # try/catch
    "UP",   # syn upgrades
    "W",    # style warnings
]
ignore = [
    "E402",   # Import not at top
    "PIE808", # range start 0
    "PLR",    # silly
    "TD003",  # todo require link
    "UP015",  # open() mode='r'
]

[tool.pytest.ini_options]
python_files = "tests/*.py"

[dependency-groups]
dev = ["ruff>=0.11.13", "pyright>=1.1.401", "pytest>=8.4.0"]
