[project]
name = "quickdif"
dynamic = ["version"]
readme = "README.md"
license = { file = "LICENSE" }
authors = [{ name = "Beinsezii" }]
requires-python = ">= 3.12"
dependencies = [
    "accelerate>=1.8.1",
    "compel>=2.1.1",
    "diffusers>=0.34.0",
    "huggingface-hub>=0.33.4",
    "peft>=0.16.0",
    "protobuf>=6.31.1",
    "sentencepiece>=0.2.0",
    "skrample[all]>=0.4.2",
    "torch>=2.7.1",
    "torchao>=0.11.0",
    "transformers>=4.53.2",
]

[project.optional-dependencies]
sageattn = ["sageattention==1.0.6"]
all = ["quickdif[sageattn]"]

[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
py-modules = ["quickdif"]

[tool.ruff]
line-length = 120
namespace-packages = ["tests"]

[tool.ruff.lint]
select = [
    "A",    # std types
    "ANN",  # annotations
    "BLE",  # blanket except
    "C4",   # comprehension
    "E",    # style errors
    "EM",   # error messages
    "EXE",  # shebangs
    "F",    # format
    "FA",   # future
    "FLY",  # expr fstring
    "FURB", # syn upgrades
    "G",    # log messages
    "I",    # imports
    "ICN",  # import conventions
    "INP001",
    "ISC",  # str cat
    "LOG",  # logging
    "NPY",  # numpy
    "PERF", # perflint
    "PIE",  # misc
    "PL",   # pylint
    "PT",   # pytest
    "Q",    # quotes
    "RUF",  # variety
    "T10",  # pdb.trace
    "T20",  # print
    "TC",   # type checking
    "TD",   # todos
    "TRY",  # try/catch
    "UP",   # syn upgrades
    "W",    # style warnings
]
ignore = [
    "G004",   # Log f-string
    "PIE808", # range start 0
    "PLR",    # silly
    "TD003",  # todo require link
    "UP015",  # open() mode='r'
]

[tool.ruff.lint.per-file-ignores]
"latent_colors.py" = ["T201"]  # prints
"quickdif.py" = ["E402"]  # import not on top

[tool.pytest.ini_options]
python_files = "tests/*.py"

[dependency-groups]
dev = ["quickdif[all]", "ruff>=0.11.13", "pyright>=1.1.401", "pytest>=8.4.0"]
